<?xml version="1.0"?>
<package format="2">
  <name>ros2_ddboat</name>
  <version>0.0.0</version>
  <description>ROS2 drivers for DDBoat</description>
  <maintainer email="kili@nbarantal.me">Kilian Barantal</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <export/>
</package>
